# predicates_for_zig

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.zig  cmake-format.yaml  predicates.c  predicates.h  test.c
